--- a/zygrader/config/changelog.txt
+++ b/zygrader/config/changelog.txt
@@ -1,5 +1,14 @@
 # Try to keep lines shorter than 70 characters
 
+3.5
+* Lots of cleanup and fixes after 3.4 added Multithreading
+* Press Alt+Enter when running code to run in gdb for debugging.
+* Add Home and End key support:
+  * Move cursor to beginning and end of line in text entries.
+  * Scroll to top and bottom of UI lists.
+* No confirmation after after logging in to zyBooks.
+* Move Text Inputs into a popup window.
+
 3.4
 * UI: Toggle insert mode on text inputs in vim mode.
 * Utils: Show score in submission picker
