Popups: Allow dynamic text updates
Allow passing an object rather than a list for the popup message. The object
must implement __iter__ and __next__ to generate the lines of text for the message
body in the popup.

Use for the submission picker. The submission text updates after picking a new
submission.

--- a/zygrader/config/changelog.txt
+++ b/zygrader/config/changelog.txt
@@ -5,6 +5,8 @@
 * Make light theme consistent.
 * Draw borders on popups.
 * Show version number in header.
+* Add commandline args to skip updates and install specific
+  versions. Run with --help for more info.
 
 3.6
 * Reformat zygrader source as a proper Python package.
