Added versioning popup message for version 4.9.0

--- a/zygrader/config/changelog.txt
+++ b/zygrader/config/changelog.txt
@@ -1,5 +1,9 @@
 # Try to keep lines shorter than 70 characters
 
+4.9.0
+* Added spooky Halloween theme to preferences.
+  Requires emoji support in terminal.
+
 4.8.0
 * Refactor user preferences.
 * Code cleanup.
